crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@149.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,5), numrange(6,9)) @> numrange(6,7);"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..66
    AExpr@7..66
      FuncCall@7..48
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "5"
        Ascii41@33..34 ")"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        FuncCall@36..48
          Ident@36..44 "numrange"
          Ascii40@44..45 "("
          AConst@45..46
            Iconst@45..46 "6"
          Ascii44@46..47 ","
          AConst@47..48
            Iconst@47..48 "9"
      Ascii41@48..49 ")"
      Ascii41@49..50 ")"
      Whitespace@50..51 " "
      Op@51..53 "@>"
      Whitespace@53..54 " "
      FuncCall@54..66
        Ident@54..62 "numrange"
        Ascii40@62..63 "("
        AConst@63..64
          Iconst@63..64 "6"
        Ascii44@64..65 ","
        AConst@65..66
          Iconst@65..66 "7"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

